voc_aug__.out
Traceback (most recent call last):
  File "/home/yuhao/Desktop/phd_Y1/PS-MT-main/VocCode/main.py", line 4, in <module>
    from train import Trainer
  File "/home/yuhao/Desktop/phd_Y1/PS-MT-main/VocCode/train.py", line 10, in <module>
    from Base.base_trainer import BaseTrainer
  File "/home/yuhao/Desktop/phd_Y1/PS-MT-main/VocCode/Base/base_trainer.py", line 9, in <module>
    from dgx.download_to_pvc import *
  File "/home/yuhao/Desktop/phd_Y1/PS-MT-main/VocCode/dgx/download_to_pvc.py", line 63
    bucket_namespace: str, bucket_name=: str):
                                       ^
SyntaxError: invalid syntax
